--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jyre-challenge",
   "version": "0.1.0",
+  "homepage":"http://AdamDCosta.github.io/jyre-challenge",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "jest-fetch-mock": "^3.0.3",
     "sass": "^1.44.0"
   }
